plugins {
    id 'java'
    id 'org.springframework.boot' // Version from root buildscript
    id 'io.spring.dependency-management' // Version from root buildscript
    id 'checkstyle'
    id 'com.gorylenko.gradle-git-properties' version '2.5.3'
}

group = 'ch.batbern'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // AWS SDK for Cognito and SES
    implementation platform('software.amazon.awssdk:bom:2.43.2')
    implementation 'software.amazon.awssdk:cognitoidentityprovider'
    implementation 'software.amazon.awssdk:ses'
    implementation 'software.amazon.awssdk:auth'

    // JWT Processing
    implementation 'com.auth0:java-jwt:4.5.2'
    implementation 'com.auth0:jwks-rsa:0.23.1'

    // Jackson for JSON processing (version managed by Spring Boot)
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // OpenAPI Support
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

    // Monitoring & Logging
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'

    // CloudWatch Logging
    implementation 'software.amazon.awssdk:cloudwatchlogs'
    implementation 'ca.pjer:logback-awslogs-appender:1.6.0'

    // Shared Kernel Dependency
    implementation project(':shared-kernel')

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Boot DevTools for hot reload
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.testcontainers:testcontainers:1.21.3'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
    testImplementation 'org.testcontainers:localstack:1.21.3'
    testImplementation 'io.rest-assured:rest-assured:6.0.0'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.1.1"
    }
}

// Configure JaCoCo for code coverage
apply plugin: 'jacoco'

// Apply Trivy security scanning
apply from: "../gradle/trivy-security.gradle"

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = 'full'
    }
}

jacoco {
    toolVersion = "0.8.10"
}

jacocoTestReport {
    dependsOn test, classes
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    // Exclude generated code from coverage
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/generated/**',           // OpenAPI generated code
                '**/*Application.class',     // Spring Boot main class
                '**/*Config.class',          // Configuration classes
                '**/*Configuration.class'    // Configuration classes
            ])
        }))
    }
}

test.finalizedBy jacocoTestReport

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                // Use 60% threshold for incremental development
                // TODO: Restore to 0.90 once coverage is improved
                minimum = 0.60
            }
        }
    }

    // Exclude generated code from coverage verification (same as jacocoTestReport)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/generated/**',           // OpenAPI generated code
                '**/*Application.class',     // Spring Boot main class
                '**/*Config.class',          // Configuration classes
                '**/*Configuration.class'    // Configuration classes
            ])
        }))
    }
}

// Coverage verification runs only during explicit test tasks, not during build
// check.dependsOn jacocoTestCoverageVerification

// Checkstyle is configured centrally in the root build.gradle
// (subprojects { plugins.withId('checkstyle') }) so settings can't drift.

tasks.named('bootRun') {
    systemProperty 'spring.profiles.active', 'local'
}

// Generate build-info.properties for Spring Boot Actuator
springBoot {
    buildInfo()
}

// Configure git.properties generation
gitProperties {
    keys = ['git.branch', 'git.commit.id', 'git.commit.id.abbrev', 'git.commit.time']
    dateFormat = "yyyy-MM-dd'T'HH:mm:ssZ"
    dateFormatTimeZone = "UTC"
    // Allow build to continue if git directory is not available (e.g., in Docker)
    failOnNoGitDirectory = false
    extProperty = 'gitProps'
}